0.03

0.02 2016-02-20T23:38:52+01:00
 - Add 'input_encoding' parameter.
 - Add REPOSITORY section to doc.

0.01 2016-02-17T10:48:26+01:00
 - First version.