@@ -1,4 +1,5 @@
 0.03
+ - Update Module::Install to 1.19 version.
 
 0.02 2016-02-20T23:38:52+01:00
  - Add 'input_encoding' parameter.
